[package]
name = "sc2_bank_signer"
version = "0.1.0"
edition = "2024"

[dependencies]
xml-rs = "0.8.25"
sha1="0.10.6"
hex="0.4.3"
clap = {version = "4.5.35", features = ["derive"]}

regex = "1.11.1"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"